--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
   </script>
   <!-- custom js -->
   <script src="./src/js/script.js"></script>
+  <script src="config.js"></script>
   <script src="./src/js/github-table.js"></script>
   <script src="./src/js/particles.js"></script>
   
