--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
   <!-- custom js -->
   <script src="./src/js/script.js"></script>
   <script src="config.js"></script>
-  <script src="./src/js/github-table.js"></script>
+  <script src="github-table.js"></script>
   <script src="./src/js/particles.js"></script>
   
 </body>
