Changing github contribution table

--- a/index.html
+++ b/index.html
@@ -232,69 +232,79 @@
         </div>
       </div>
     </div>
-
+    <!-- github contribution -->
     <div class="github-container">
       <h2 class="table-title">
         Contribuições no Github
       </h2>
       <a href="https://github.com/anamanuellar/" title="Painel de contribruições GitHub" class="github-link">
-        <table id="contribution-table"></table>
+        <img class="github-table" src="http://ghchart.rshah.org/009ba8/anamanuellar"
+          alt="anamanuellar's Github chart" />
       </a>
     </div>
     <!-- portfolio section design -->
     <div class="card-group" id="portfolio">
       <div class="card-group-title">Projetos</div>
       <div class="card-deck">
-          <!-- Primeiro Card -->
-          <div class="card">
-              <img class="card-img-top" src="./images/portfolio1.jpg" alt="HoobBank">
-              <div class="card-body">
-                  <h5 class="card-title">HoobBank</h5>
-                  <p class="card-text">O Projeto HoobBank é uma landing page totalmente responsiva que apresenta um banco fictício. Este site foi desenvolvido utilizando uma interface UX/UI moderna em React JS com Tailwind.</p>
-              </div>
-              <div class="card-footer">
-                  <span class="card-tag">React</span>
-                  <span class="card-tag">Tailwind</span>
-              </div>
-              <div class="btn-group">
-                  <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar/HoobBankproject')" value="Github">
-                  <input type="button" class="card-button" target="blank" onclick="window.open('https://anamanuellar.github.io/HoobBankproject/')" value="Demo">
-              </div>
+        <!-- Primeiro Card -->
+        <div class="card">
+          <img class="card-img-top" src="./images/portfolio1.jpg" alt="HoobBank">
+          <div class="card-body">
+            <h5 class="card-title">HoobBank</h5>
+            <p class="card-text">O Projeto HoobBank é uma landing page totalmente responsiva que apresenta um banco
+              fictício. Este site foi desenvolvido utilizando uma interface UX/UI moderna em React JS com Tailwind.</p>
           </div>
-          <!-- Segundo Card -->
-          <div class="card">
-              <img class="card-img-top" src="./images/portfolio2.jpg" alt="Jogo da velha">
-              <div class="card-body">
-                  <h5 class="card-title">Jogo da Velha</h5>
-                  <p class="card-text">Este é um projeto de um jogo da velha simples criado com HTML, CSS e JavaScript. Design simples e intuitivo com alternância de jogador após cada jogada e detecção de vitória ou empate.</p>
-              </div>
-              <div class="card-footer">
-                  <span class="card-tag">HTML</span>
-                  <span class="card-tag">CSS</span>
-                  <span class="card-tag">JavaScript</span>
-              </div>
-              <div class="btn-group">
-                  <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar/Tic-tac-toe')" value="Github">
-                  <input type="button" class="card-button" target="blank" onclick="window.open('https://anamanuellar.github.io/Tic-tac-toe/')" value="Demo">
-              </div>
+          <div class="card-footer">
+            <span class="card-tag">React</span>
+            <span class="card-tag">Tailwind</span>
           </div>
-          <!-- Terceiro Card -->
-          <div class="card">
-              <img class="card-img-top" src="./images/portfolio3.jpg" alt="Pizza Express">
-              <div class="card-body">
-                  <h5 class="card-title">Pizza Express</h5>
-                  <p class="card-text">Pizza Express é um website fictício de cardápio de uma pizzaria que apresenta uma variedade de pizzas deliciosas. A página apresenta várias pizzas com descrições detalhadas.</p>
-              </div>
-              <div class="card-footer">
-                  <span class="card-tag">HTML</span>
-                  <span class="card-tag">CSS</span>
-              </div>
-              <div class="btn-group">
-                  <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar/pizza-menu')" value="Github">
-                  <input type="button" class="card-button" target="blank" onclick="window.open('https://anamanuellar.github.io/pizza-menu/')" value="Demo">
-              </div>
+          <div class="btn-group">
+            <input type="button" class="card-button" target="blank"
+              onclick="window.open('https://github.com/anamanuellar/HoobBankproject')" value="Github">
+            <input type="button" class="card-button" target="blank"
+              onclick="window.open('https://anamanuellar.github.io/HoobBankproject/')" value="Demo">
           </div>
-          <!-- Quarto Card -->
+        </div>
+        <!-- Segundo Card -->
+        <div class="card">
+          <img class="card-img-top" src="./images/portfolio2.jpg" alt="Jogo da velha">
+          <div class="card-body">
+            <h5 class="card-title">Jogo da Velha</h5>
+            <p class="card-text">Este é um projeto de um jogo da velha simples criado com HTML, CSS e JavaScript. Design
+              simples e intuitivo com alternância de jogador após cada jogada e detecção de vitória ou empate.</p>
+          </div>
+          <div class="card-footer">
+            <span class="card-tag">HTML</span>
+            <span class="card-tag">CSS</span>
+            <span class="card-tag">JavaScript</span>
+          </div>
+          <div class="btn-group">
+            <input type="button" class="card-button" target="blank"
+              onclick="window.open('https://github.com/anamanuellar/Tic-tac-toe')" value="Github">
+            <input type="button" class="card-button" target="blank"
+              onclick="window.open('https://anamanuellar.github.io/Tic-tac-toe/')" value="Demo">
+          </div>
+        </div>
+        <!-- Terceiro Card -->
+        <div class="card">
+          <img class="card-img-top" src="./images/portfolio3.jpg" alt="Pizza Express">
+          <div class="card-body">
+            <h5 class="card-title">Pizza Express</h5>
+            <p class="card-text">Pizza Express é um website fictício de cardápio de uma pizzaria que apresenta uma
+              variedade de pizzas deliciosas. A página apresenta várias pizzas com descrições detalhadas.</p>
+          </div>
+          <div class="card-footer">
+            <span class="card-tag">HTML</span>
+            <span class="card-tag">CSS</span>
+          </div>
+          <div class="btn-group">
+            <input type="button" class="card-button" target="blank"
+              onclick="window.open('https://github.com/anamanuellar/pizza-menu')" value="Github">
+            <input type="button" class="card-button" target="blank"
+              onclick="window.open('https://anamanuellar.github.io/pizza-menu/')" value="Demo">
+          </div>
+        </div>
+        <!-- Quarto Card -->
         <div class="card">
           <img class="card-img-top" src="./images/portfolio4.jpg" alt="Card image cap">
           <div class="card-body">
@@ -376,7 +386,7 @@
         <input type="submit" value="Enviar" />
       </form>
     </section>
-    
+
   </main>
   <!-- footer design -->
   <footer>
@@ -418,15 +428,10 @@
   <!--  Particles js -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
-  <!-- Github Calendar -->
-  <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
-  </script>
   <!-- custom js -->
   <script src="./src/js/script.js"></script>
-  <script src="config.js"></script>
-  <script src="github-table.js"></script>
   <script src="./src/js/particles.js"></script>
-  
+
 </body>
 
 </html>
