Changing CV and fixing github chart style

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h1 class="intro-greeting">Olá, me chamo</h1><span class="intro-name"> Ana Manuella.</span>
           <h1>
             <a href="" class="typewrite" data-period="2000"
-              data-type='[ "Sou Desenvolvedora Front-End Jr.", "Sou apaixonada por programação.", "Sou criativa.", "Amo Design."]'>
+              data-type='[ "Sou Desenvolvedora Front-End", "Sou apaixonada por programação.", "Sou criativa.", "Amo Design."]'>
               <span class="typewrite-wrap"></span>
             </a>
           </h1>
@@ -73,7 +73,7 @@
         <div class="heading">
           <h2 class="about-title">Sobre mim</h2>
           <p class="about-text"></p>
-          <p class="about-text">&#128105; Olá, sou a Manu - uma desenvolvedora full-stack em formação e ex-profissional
+          <p class="about-text">&#128105; Olá, sou a Manu - uma desenvolvedora front-end em formação e ex-profissional
             de gestão operacional.
           </p>
           <p class="about-text">&#127978; Com uma pós-graduação em Administração e 10 anos de experiência em uma grande
@@ -97,7 +97,7 @@
             o sucesso da empresa que me acolher.</p>
         </div>
         <div class="btn-group">
-          <a class="card-button" href="./pdf/CV_Ana Manuella Ribeiro - Desenvolvedora Front End Júnior.pdf" download>
+          <a class="card-button" href="./pdf/CV_Ana Manuella Ribeiro - Desenvolvedora Front End.pdf" download>
             <i class="fa-regular fa-file-pdf"></i> Download CV
           </a>
           <a class="card-button" href="https://www.linkedin.com/in/manu-ribeiro-dev/" target="_blank">
@@ -412,6 +412,7 @@
               <li class="credit-list">Particles: <a href="https://vincentgarreau.com/particles.js/#nasa "> Vincent
                   Garreau</a></li>
               <li class="credit-list">SVG: <a href="https://fontawesome.com"> FontAwesome</a></li>
+              <li class="credit-list">Github chart API: <a href="https://www.rshah.org/"> Rushi Shah</a></li>
             </ul>
           </div>
           <div id="clModal" class="clModal">
