adjusting hero and bio margin

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         Contribuições no Github
       </h2>
       <a href="https://github.com/anamanuellar/" title="Painel de contribruições GitHub" class="github-link">
-        <img class="github-table" src="http://ghchart.rshah.org/009ba8/anamanuellar"
+        <img class="github-table" src="https://ghchart.rshah.org/009ba8/anamanuellar"
           alt="anamanuellar's Github chart" />
       </a>
     </div>
