Adjusting responsive screens

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             o sucesso da empresa que me acolher.</p>
         </div>
         <div class="btn-group">
-          <a class="card-button" href="./pdf/CV_Ana Manuella Ribeiro - Desenvolvedora Front End.pdf" download>
+          <a class="card-button" id="btn-bio" href="./pdf/CV_Ana Manuella Ribeiro - Desenvolvedora Front End.pdf" download>
             <i class="fa-regular fa-file-pdf"></i> Download CV
           </a>
-          <a class="card-button" href="https://www.linkedin.com/in/manu-ribeiro-dev/" target="_blank">
+          <a class="card-button" id="btn-bio" href="https://www.linkedin.com/in/manu-ribeiro-dev/" target="_blank">
             <i class="fa-brands fa-linkedin"></i> LinkedIn
           </a>
         </div>
