--- a/index.html
+++ b/index.html
@@ -389,6 +389,81 @@
 
   </main>
   <!-- footer design -->
+  <footer class="footer" id="contato">
+    <div class="footer-div">
+
+        <div class="footer-div-1">
+            <div class="footer-div-1-column">
+                <div class="logo">
+                  <a href=""><img src="./images/logo.svg" alt="logo" class="logo-image"></a>
+                  <a href="" class="logo-title">Manu Ribeiro</a>
+                </div>
+                <p>CEP: 41745-028. <br>
+                  Salvador - Bahia - Brasil</p>
+            </div>
+        </div>
+
+        <div class="footer-div-2">
+            <div class="footer-div-2-column">
+                <span><b>Contatos</b></span>
+                <p>ribeiro.anamanuellar@gmail.com</p>
+                <p>+55 71 98419-9762</p>
+            </div>
+        </div>
+
+        <div class="footer-div-3">
+            <div class="footer-div-3-column">
+                <!-- elemento -->
+                <span><b>Links</b></span>
+                <p><a href="#home"> Início </a></p>
+                <p><a href="#about"> Sobre</a></p>
+                <p><a href="#portfolio"> Projetos</a></p>
+                <p><a href="#contact"> Contato</a></p>
+            </div>
+        </div>     
+
+        <div class="footer-div-4">
+            <div class="footer-div-4-column">
+                <!-- elemento -->
+                <span><b>Outros</b></span>
+                <p><a id="opModal"> Créditos</a></p>
+            </div>
+            <section id="modal" class="modal">
+              
+              <div class="modalWrapper">
+                <div class="modalContents">
+                  <h1 class="credit-title">
+                    Créditos
+                  </h1>
+                  <div class="credit">
+                    <p class="credit-list">Inspiração: <a href="https://matthewjigalin-react-portfolio.netlify.app/"> Matthew
+                        Jigalin</a></p>
+                    <p class="credit-list">Modal: <a href="https://codepen.io/i_garasi/pen/jOXwmVy"> CodePen Igarashi</a>
+                    </p>
+                    <li class="credit-list">Glow Effect (Hero): <a
+                        href="https://codersblock.com/blog/creating-glow-effects-with-css/">Coders Block</a></li>
+                    <li class="credit-list">Particles: <a href="https://vincentgarreau.com/particles.js/#nasa "> Vincent
+                        Garreau</a></li>
+                    <li class="credit-list">SVG: <a href="https://fontawesome.com"> FontAwesome</a></li>
+                    <li class="credit-list">Fonte: <a href="https://fonts.google.com/"> Google Fonts</a></li>
+                    <li class="credit-list">Github chart API: <a href="https://www.rshah.org/"> Rushi Shah</a></li>
+                    <li class="credit-list">Glassmorphism: <a href="https://hype4.academy/tools/glassmorphism-generator"> Glassmorphism Generator</a></li>
+                    </div>
+                </div>
+                <div id="clModal" class="clModal">
+                  ×
+                </div>
+              </div>
+            </section>
+        </div>
+
+    </div>
+    <p class="footer-right">Copyright © 2023 – Todos os Direitos Reservados.</p>
+</footer>
+
+<!-- 
+
+
   <footer>
     <div class="footer-content">
       <span>Todos os direitos reservados &copy; 2023</span>
@@ -423,7 +498,7 @@
 
     </div>
   </footer>
-
+ -->
 
 
   <!--  Particles js -->
