Adjusting footer and adding last project

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul>
         <li> <a href="#home" class="active"> Início </a> </li>
         <li> <a href="#about"> Sobre</a> </li>
-        <li> <a href="#portfolio"> Portfolio</a> </li>
+        <li> <a href="#project"> Projetos</a> </li>
         <li> <a href="#contact"> Contato</a> </li>
       </ul>
     </nav>
@@ -243,7 +243,7 @@
       </a>
     </div>
     <!-- portfolio section design -->
-    <div class="card-group" id="portfolio">
+    <div class="card-group" id="project">
       <div class="card-group-title">Projetos</div>
       <div class="card-deck">
         <!-- Primeiro Card -->
@@ -310,7 +310,7 @@
           <div class="card-body">
             <h5 class="card-title">Quizz</h5>
             <p class="card-text">Este é um simples projeto de um quiz em JavaScript. Os usuários podem responder às
-              perguntas e ver seus resultados.</p>
+              perguntas e ver seus resultados. Ao final da jogada, a página informa se houve vencedor ou empate.</p>
           </div>
           <div class="card-footer">
             <span class="card-tag">HTML</span>
@@ -348,18 +348,18 @@
         <div class="card">
           <img class="card-img-top" src="./images/portfolio6.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
+            <h5 class="card-title">Landing Page - ODS</h5>
+            <p class="card-text">Projeto desenvolvido sobre a ODS 13 - Ação Contra a Mudança Global do Clima. O site busca conscientizar sobre a importância da ação climática e o compromisso global para enfrentar a mudança climática.</p>
           </div>
           <div class="card-footer">
-            <p class="card-tag">Last updated 3 mins ago</p>
+            <span class="card-tag">HTML</span>
+            <span class="card-tag">CSS</span>
           </div>
           <div class="btn-group">
             <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://github.com/anamanuellar')" value="Github">
+              onclick="window.open('https://github.com/anamanuellar/ODS13-project')" value="Github">
             <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://github.com/anamanuellar')" value="Demo">
+              onclick="window.open('https://anamanuellar.github.io/ODS13-project/')" value="Demo">
           </div>
         </div>
       </div>
@@ -398,8 +398,8 @@
                   <a href=""><img src="./images/logo.svg" alt="logo" class="logo-image"></a>
                   <a href="" class="logo-title">Manu Ribeiro</a>
                 </div>
-                <p>CEP: 41745-028. <br>
-                  Salvador - Bahia - Brasil</p>
+                <p>Salvador - Bahia - Brasil</p>
+                <small>Este projeto foi desenvolvido como projeto de conclusão do curso Elas Na Tech em parceria com a CCR</small>
             </div>
         </div>
 
@@ -436,18 +436,18 @@
                     Créditos
                   </h1>
                   <div class="credit">
-                    <p class="credit-list">Inspiração: <a href="https://matthewjigalin-react-portfolio.netlify.app/"> Matthew
-                        Jigalin</a></p>
-                    <p class="credit-list">Modal: <a href="https://codepen.io/i_garasi/pen/jOXwmVy"> CodePen Igarashi</a>
-                    </p>
-                    <li class="credit-list">Glow Effect (Hero): <a
+                    <li class="card-button">Inspiração: <a href="https://matthewjigalin-react-portfolio.netlify.app/"> Matthew
+                        Jigalin</a></li>
+                    <li class="card-button">Modal: <a href="https://codepen.io/i_garasi/pen/jOXwmVy"> CodePen Igarashi</a>
+                    </li>
+                    <li class="card-button">Glow Effect (Hero): <a
                         href="https://codersblock.com/blog/creating-glow-effects-with-css/">Coders Block</a></li>
-                    <li class="credit-list">Particles: <a href="https://vincentgarreau.com/particles.js/#nasa "> Vincent
+                    <li class="card-button">Particles: <a href="https://vincentgarreau.com/particles.js/#nasa "> Vincent
                         Garreau</a></li>
-                    <li class="credit-list">SVG: <a href="https://fontawesome.com"> FontAwesome</a></li>
-                    <li class="credit-list">Fonte: <a href="https://fonts.google.com/"> Google Fonts</a></li>
-                    <li class="credit-list">Github chart API: <a href="https://www.rshah.org/"> Rushi Shah</a></li>
-                    <li class="credit-list">Glassmorphism: <a href="https://hype4.academy/tools/glassmorphism-generator"> Glassmorphism Generator</a></li>
+                    <li class="card-button">SVG: <a href="https://fontawesome.com"> FontAwesome</a></li>
+                    <li class="card-button">Fonte: <a href="https://fonts.google.com/"> Google Fonts</a></li>
+                    <li class="card-button">Github chart API: <a href="https://www.rshah.org/"> Rushi Shah</a></li>
+                    <li class="card-button">Glassmorphism: <a href="https://hype4.academy/tools/glassmorphism-generator"> Glassmorphism Generator</a></li>
                     </div>
                 </div>
                 <div id="clModal" class="clModal">
@@ -478,16 +478,16 @@
               Créditos
             </h1>
             <ul class="credit">
-              <li class="credit-list">Inspiração: <a href="https://matthewjigalin-react-portfolio.netlify.app/"> Matthew
+              <li class="card-tag">Inspiração: <a href="https://matthewjigalin-react-portfolio.netlify.app/"> Matthew
                   Jigalin</a></li>
-              <li class="credit-list">Modal: <a href="https://codepen.io/i_garasi/pen/jOXwmVy"> CodePen Igarashi</a>
+              <li class="card-tag">Modal: <a href="https://codepen.io/i_garasi/pen/jOXwmVy"> CodePen Igarashi</a>
               </li>
-              <li class="credit-list">Glow Effect (Hero): <a
+              <li class="card-tag">Glow Effect (Hero): <a
                   href="https://codersblock.com/blog/creating-glow-effects-with-css/"> Coders Block</a></li>
-              <li class="credit-list">Particles: <a href="https://vincentgarreau.com/particles.js/#nasa "> Vincent
+              <li class="card-tag">Particles: <a href="https://vincentgarreau.com/particles.js/#nasa "> Vincent
                   Garreau</a></li>
-              <li class="credit-list">SVG: <a href="https://fontawesome.com"> FontAwesome</a></li>
-              <li class="credit-list">Github chart API: <a href="https://www.rshah.org/"> Rushi Shah</a></li>
+              <li class="card-tag">SVG: <a href="https://fontawesome.com"> FontAwesome</a></li>
+              <li class="card-tag">Github chart API: <a href="https://www.rshah.org/"> Rushi Shah</a></li>
             </ul>
           </div>
           <div id="clModal" class="clModal">
