--- a/index.html
+++ b/index.html
@@ -73,28 +73,22 @@
         <div class="heading">
           <h2 class="about-title">Sobre mim</h2>
           <p class="about-text"></p>
-          <p class="about-text">&#128105; Olá, sou a Manu - uma desenvolvedora front-end em formação e ex-profissional
+          <p class="about-text">&#128105; Olá, sou a Manu - uma desenvolvedora full-stack em formação e ex-profissional
             de gestão operacional.
           </p>
           <p class="about-text">&#127978; Com uma pós-graduação em Administração e 10 anos de experiência em uma grande
-            empresa de hotelaria,
-            domino liderança, planejamento, análise financeira e atendimento ao cliente.</p>
-          <p class="about-text">&#128188; Minha paixão por proporcionar experiências excepcionais me levou a uma
-            transição de carreira ainda em andamento para o
-            desenvolvimento web e de software.</p>
+            empresa de hotelaria, domino liderança, planejamento, análise financeira e atendimento ao cliente.</p>
+          <p class="about-text">&#128188; Minha paixão por proporcionar experiências excepcionais me levou à uma
+            transição de carreira ainda em andamento para o desenvolvimento web e de software.</p>
           <p class="about-text">&#128640; Atualmente, estou mergulhando em tecnologias como Node.js, JavaScript,
-            Typescript, Python, HTML5, CSS3,
-            React Native, ReactJS, Bootstrap, Tailwind CSS, MySQL, Git, Figma e Trello.</p>
+            Typescript, Python, HTML5, CSS3, React Native, ReactJS, Bootstrap, Tailwind CSS, MySQL, Git, Figma e Trello.</p>
           <p class="about-text">&#127891; Além disso, estou participando do programa de formação Elas na Tech, resultado
-            da parceria da JA
-            Brasil com o Grupo CCR, que oferece exclusivamente para mulheres uma formação completa em programação web.
+            da parceria da JA Brasil com o Grupo CCR, que oferece exclusivamente para mulheres uma formação completa em programação web.
           </p>
           <p class="about-text">&#127775; Minha experiência anterior junto com minhas habilidades técnicas me permite
-            desenvolver projetos de forma
-            eficaz e colaborativa - tanto individualmente quanto em equipe.</p>
+            desenvolver projetos de forma eficaz e colaborativa - tanto individualmente quanto em equipe.</p>
           <p class="about-text">&#129309; Estou à procura de uma oportunidade para me aprimorar ainda mais nesta área
-            empolgante e contribuir para
-            o sucesso da empresa que me acolher.</p>
+            empolgante e contribuir para o sucesso da empresa que me acolher.</p>
         </div>
         <div class="btn-group">
           <a class="card-button" id="btn-bio" href="./pdf/CV_Ana Manuella Ribeiro - Desenvolvedora Front End.pdf" download>
@@ -383,7 +377,7 @@
         <input required name="name" type="text" class="contact-form" placeholder="Nome" />
         <input required name="email" type="email" class="contact-form" placeholder="Email" />
         <textarea required name="text" class="contact-form" placeholder="Mensagem"></textarea>
-        <input type="submit" value="Enviar" />
+        <input type="submit" value="Enviar" onclick=showAlert() />
       </form>
     </section>
 
@@ -460,45 +454,6 @@
     </div>
     <p class="footer-right">Copyright © 2023 – Todos os Direitos Reservados.</p>
 </footer>
-
-<!-- 
-
-
-  <footer>
-    <div class="footer-content">
-      <span>Todos os direitos reservados &copy; 2023</span>
-      <span class="separator-dot">&#8226;</span>
-      <a id="opModal"> Créditos</a>
-
-      <section id="modal" class="modal">
-        <div id="modalBg" class="modalBg"></div>
-        <div class="modalWrapper">
-          <div class="modalContents">
-            <h1 class="credit-title">
-              Créditos
-            </h1>
-            <ul class="credit">
-              <li class="card-tag">Inspiração: <a href="https://matthewjigalin-react-portfolio.netlify.app/"> Matthew
-                  Jigalin</a></li>
-              <li class="card-tag">Modal: <a href="https://codepen.io/i_garasi/pen/jOXwmVy"> CodePen Igarashi</a>
-              </li>
-              <li class="card-tag">Glow Effect (Hero): <a
-                  href="https://codersblock.com/blog/creating-glow-effects-with-css/"> Coders Block</a></li>
-              <li class="card-tag">Particles: <a href="https://vincentgarreau.com/particles.js/#nasa "> Vincent
-                  Garreau</a></li>
-              <li class="card-tag">SVG: <a href="https://fontawesome.com"> FontAwesome</a></li>
-              <li class="card-tag">Github chart API: <a href="https://www.rshah.org/"> Rushi Shah</a></li>
-            </ul>
-          </div>
-          <div id="clModal" class="clModal">
-            ×
-          </div>
-        </div>
-      </section>
-
-    </div>
-  </footer>
- -->
 
 
   <!--  Particles js -->
