adding credits to typewrite effect

--- a/index.html
+++ b/index.html
@@ -432,6 +432,8 @@
                   <div class="credit">
                     <li class="card-button">Inspiração: <a href="https://matthewjigalin-react-portfolio.netlify.app/"> Matthew
                         Jigalin</a></li>
+                    <li class="card-button">Efeito Typewrite: <a href="https://codepen.io/hi-im-si/pen/ALgzqo"> Simon Shahriveri
+                       </a></li>
                     <li class="card-button">Modal: <a href="https://codepen.io/i_garasi/pen/jOXwmVy"> CodePen Igarashi</a>
                     </li>
                     <li class="card-button">Glow Effect (Hero): <a
